# video-stuff

./: .gitignore  README.md  main.py  pyproject.toml
watersort/: Investigation Sheet.ipynb  grapher.py  helpers.py  main.py  title_ides.txt
watersort/watersort_rust/: Cargo.toml
watersort/watersort_rust/src/: main.rs
