[tool.poetry]
name = "manimvideot"
version = "0.1.0"
description = ""
authors = ["Oskari Lehto <oskari.lehto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^75.7.0"
networkx = "^3.4.2"
jupyterlab = "^4.3.4"
np = "^1.0.2"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
